2005-11-29  Miguel de Icaza  <miguel@novell.com>

	* NumericUpDown.cs (EndInit): When we are done initializing,
	reflect any updates on the UI.

2005-12-02  Jackson Harper  <jackson@ximian.com>

	* ImplicitHScrollBar.cs:
	* ImplicitVScrollBar.cs: New scrollbars that don't take focus from
	their container controls.
	* TreeView.cs: Use the new implicit scrollbars.

2005-12-02  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Make top_node internal so the TreeNodeCollections
	can play with it.
	* TreeNodeCollection.cs: If we remove the topnode we need to
	update topnode to the next node in line.
	- When clearing nodes go through the same process as removing
	them, so they get depareneted and checked if they are top node.

2005-12-01  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: When imagelists are used the image area is
	selectable as well as the text.
	- If there are no selected nodes select the first one.
	* TreeNodeCollection.cs: Getting the TreeView is mildly expensive,
	so don't do it more then we need to.

2005-12-01  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: Reimplement the scroll arrow drawing so
	that arrows can be scaled.

2005-12-01  Jackson Harper  <jackson@ximian.com>

	* TreeNode.cs : Fixed bugs that caused FullPathTest + Traverse to
	fail. Patch by Dieter Bremes

2005-11-30  Jackson Harper  <jackson@ximian.com>

	* Form.cs: Property is 2.0 only
	* PrintDialog.cs: Signature fix.

2005-11-30  Peter Dennis Bartok  <pbartok@novell.com>

	* TextControl.cs: 
	  - No longer artificially moves text 2 pixels down (now that we have
	    borders this is no longer needed)
	  - Added calcs for left, hanging and right indent

2005-11-23  Mike Kestner  <mkestner@novell.com>

	* Menu.cs: mark MenuChanged internal, since it's not exposed by MS.

2005-11-30  Jackson Harper  <jackson@ximian.com>

	* MdiChildContext.cs: Set the cloned menus forms, as these don't
	get cloned as part of CloneMenu ().