@@ -1,3 +1,9 @@
+2005-12-02  Peter Dennis Bartok  <pbartok@novell.com>
+
+	* TextBoxBase.cs: Now uses Jackson's new and improved ImplicitScrollbar
+	* RichTextBox.cs: FormatText position arguments are 1-based, now making
+	  sure that what we pass to FormatText is always 1-based. Fixes #76885
+
 2005-11-29  Miguel de Icaza  <miguel@novell.com>
 
 	* NumericUpDown.cs (EndInit): When we are done initializing,
